--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql-request": "^6.1.0",
     "mongodb": "^6.5.0",
     "next": "14.2.3",
     "react": "^18",
